# nh-2025-movie-map

./: README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: full_movie_details.json  raw_movie_details.json  umap_embeddings.json
src/: embeddings.py  full_pipeline.py  scraping.py
web/: README.md  index.html  script.js  styles.css
