[project]
name = "nh-2025-movie-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.25.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
