[project]
name = "nh-2025-movie-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.25.0",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.3",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
